Fix overflow on users.

--- a/src/react/scss/base/_app.scss
+++ b/src/react/scss/base/_app.scss
@@ -52,6 +52,7 @@ body {
   margin-right: 20px;
   width: 240px;
   height: 100%;
+  overflow-y: auto;
   float: left;
   background: #e2e2e2;
   ul {
